--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -42,4 +42,4 @@ QT4_WRAP_CPP(project_MOC_SRCS)
 
 # ### TARGET ###
 add_library(jsonbus SHARED ${project_SRCS} ${project_HDRS})
-target_link_libraries(jsonbus ${QT_LIBRARIES})
+target_link_libraries(jsonbus ${QT_LIBRARIES} argsparser)
