--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,8 @@ cmake_minimum_required(VERSION 2.8.0)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/..)
 
+add_definitions(-std=c++0x)
+
 # ### SUBDIRECTORIES ###
 add_subdirectory(core)
 add_subdirectory(jsonbusd)
