--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ endif(NOT WIN32)
 # ### SUBDIRECTORIES ###
 add_subdirectory(container)
 add_subdirectory(core)
+add_subdirectory(plugins)
 add_subdirectory(router)
 add_subdirectory(service)
 add_subdirectory(test)
