--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ endif(NOT WIN32)
 # ### SUBDIRECTORIES ###
 add_subdirectory(container)
 add_subdirectory(core)
-add_subdirectory(plugins)
+add_subdirectory(master)
 add_subdirectory(router)
-add_subdirectory(service)
+add_subdirectory(services)
 add_subdirectory(test)
