--- a/services/echo/CMakeLists.txt
+++ b/services/echo/CMakeLists.txt
@@ -38,5 +38,4 @@ QT4_WRAP_UI(project_UIS_H)
 QT4_WRAP_CPP(project_MOC_SRCS)
 
 # ### TARGET ###
-add_library(exemple SHARED ${project_SRCS} ${project_HDRS})
-# target_link_libraries(exemple ${QT_LIBRARIES} jsonbus)
+add_library(echo SHARED ${project_SRCS} ${project_HDRS})
