--- a/container/CMakeLists.txt
+++ b/container/CMakeLists.txt
@@ -35,8 +35,8 @@ file(GLOB project_SRCS *.cpp)
 find_package(Qt4 REQUIRED)
 include(${QT_USE_FILE})
 QT4_WRAP_UI(project_UIS_H)
-QT4_WRAP_CPP(project_MOC_SRCS)
+QT4_WRAP_CPP(project_MOC_SRCS container.h)
 
 # ### TARGET ###
-add_executable(jsonbus_container ${project_SRCS} ${project_HDRS})
+add_executable(jsonbus_container ${project_SRCS} ${project_MOC_SRCS} ${project_HDRS})
 target_link_libraries(jsonbus_container ${QT_LIBRARIES} jsonbus)
