JSON parser add

--- a/core/jsonparser/CMakeLists.txt
+++ b/core/jsonparser/CMakeLists.txt
@@ -1,5 +1,5 @@
 #
-#  Copyright (c) 2012, Emeric Verschuur <contact@openihs.org>
+#  Copyright (c) 2012, Emeric Verschuur <emericv@openihs.org>
 #  All rights reserved.
 # 
 #  Redistribution and use in source and binary forms, with or without
@@ -13,10 +13,10 @@
 #      names of its contributors may be used to endorse or promote products
 #      derived from this software without specific prior written permission.
 # 
-#  THIS SOFTWARE IS PROVIDED BY Emeric Verschuur ''AS IS'' AND ANY
+#  THIS SOFTWARE IS PROVIDED BY Emeric Verschuur <emericv@openihs.org> ''AS IS'' AND ANY
 #  EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
 #  WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
-#  DISCLAIMED. IN NO EVENT SHALL Emeric Verschuur BE LIABLE FOR ANY
+#  DISCLAIMED. IN NO EVENT SHALL Emeric Verschuur <emericv@openihs.org> BE LIABLE FOR ANY
 #  DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
 #  (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
 #  LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
@@ -31,14 +31,13 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 file(GLOB project_HDRS *.h)
 file(GLOB project_SRCS *.cpp)
 
-# ### QT4 ###
-find_package(Qt4 REQUIRED)
-include(${QT_USE_FILE})
-QT4_WRAP_UI(project_UIS_H)
-QT4_WRAP_CPP(project_MOC_SRCS plugin.h)
-
-# add_subdirectory(jsonparser)
+# ### FLEX & BISON ###
+find_package(BISON)
+find_package(FLEX)
+bison_target(Parser parser.y ${CMAKE_CURRENT_BINARY_DIR}/parser.cc)
+flex_target(Scanner scanner.l ${CMAKE_CURRENT_BINARY_DIR}/scanner.cc)
+add_flex_bison_dependency(Scanner Parser)
 
 # ### TARGET ###
-add_library(jsonbus SHARED ${project_SRCS} ${project_HDRS} ${project_MOC_SRCS})
-target_link_libraries(jsonbus ${QT_LIBRARIES} qjson)
+add_library(jsonparser STATIC ${BISON_Parser_OUTPUTS} ${FLEX_Scanner_OUTPUTS} ${project_SRCS} ${project_HDRS})
+# target_link_libraries(jsonparser )
