--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -34,8 +34,8 @@ file(GLOB project_SRCS *.cpp)
 # ### QT4 ###
 find_package(Qt4 REQUIRED)
 include(${QT_USE_FILE})
-QT4_WRAP_UI(project_UIS_H)
-QT4_WRAP_CPP(project_MOC_SRCS plugin.h jsonparsertask.h application.h slaveapplication.h)
+qt4_wrap_ui(project_UIS_H)
+qt4_wrap_cpp(project_MOC_SRCS plugin.h jsonparsertask.h application.h slaveapplication.h)
 
 add_subdirectory(jsonparser)
 
