--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,13 +18,30 @@
 project(jsonbus)
 cmake_minimum_required(VERSION 2.8.0)
 
+SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/ ${CMAKE_MODULE_PATH})
+
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
-if(NOT WIN32)
-set(CMAKE_CXX_FLAGS "-Wall -std=gnu++0x -fPIC")
-set(CMAKE_CXX_FLAGS_RELEASE "-O3")
-set(CMAKE_CXX_FLAGS_DEBUG  "-g3")
-endif(NOT WIN32)
+# Initialize CXXFLAGS.
+set(CMAKE_CXX_FLAGS                "-fPIC -Wall -std=c++11 -DCXX11")
+set(CMAKE_CXX_FLAGS_DEBUG          "-O0 -g")
+set(CMAKE_CXX_FLAGS_MINSIZEREL     "-Os -DNDEBUG")
+set(CMAKE_CXX_FLAGS_RELEASE        "-O4 -DNDEBUG")
+set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g")
+
+# Compiler-specific C++11 activation.
+if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
+    execute_process(
+        COMMAND ${CMAKE_CXX_COMPILER} -dumpversion OUTPUT_VARIABLE GCC_VERSION)
+    if (NOT (GCC_VERSION VERSION_GREATER 4.7 OR GCC_VERSION VERSION_EQUAL 4.7))
+#         message(FATAL_ERROR "${PROJECT_NAME} requires g++ 4.7 or greater.")
+		set(CMAKE_CXX_FLAGS                "-fPIC -Wall -std=c++0x")
+    endif ()
+elseif ("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
+else ()
+    message(FATAL_ERROR "Your C++ compiler does not support C++11.")
+endif ()
 
 # ### SUBDIRECTORIES ###
 add_subdirectory(jsonbus)
