Services/Bundles implementation

--- a/jsonbus/CMakeLists.txt
+++ b/jsonbus/CMakeLists.txt
@@ -20,4 +20,5 @@ add_subdirectory(container)
 add_subdirectory(core)
 add_subdirectory(master)
 add_subdirectory(router)
+add_subdirectory(service)
 add_subdirectory(test)
