--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 #
-#    Copyright 2012-2013 Emeric Verschuur <emericv@openihs.org>
+#    Copyright 2012-2014 Emeric Verschuur <emericv@openihs.org>
 # 
 #    Licensed under the Apache License, Version 2.0 (the "License");
 #    you may not use this file except in compliance with the License.
@@ -43,7 +43,7 @@ else ()
     message(FATAL_ERROR "Your C++ compiler does not support C++11.")
 endif ()
 
-# add_definitions(-DJSONBUS_DISPLAY_BACKTRACE)
+add_definitions(-DJSONBUS_DISPLAY_BACKTRACE)
 
 # ### SUBDIRECTORIES ###
 add_subdirectory(jsonbus)
