--- a/jsonbus/core/CMakeLists.txt
+++ b/jsonbus/core/CMakeLists.txt
@@ -29,5 +29,5 @@ qt4_wrap_cpp(project_MOC_SRCS jsonparsertask.h application.h slaveapplication.h)
 add_subdirectory(jsonparser)
 
 # ### TARGET ###
-add_library(jsonbus SHARED ${project_SRCS} ${project_HDRS} ${project_MOC_SRCS})
+add_library(jsonbus ${JSONBUS_LIBRARY_TYPE} ${project_SRCS} ${project_HDRS} ${project_MOC_SRCS})
 target_link_libraries(jsonbus ${QT_LIBRARIES} jsonparser)
