jsonparser CMakeList fix

--- a/jsonbus/core/jsonparser/CMakeLists.txt
+++ b/jsonbus/core/jsonparser/CMakeLists.txt
@@ -26,7 +26,7 @@ find_package(BISON)
 find_package(FLEX)
 if ("${BISON_VERSION}" MATCHES "(^2\\..*)")
 	add_definitions(-DGNU_BISON_V2)
-bison_target(Parser parser.y ${CMAKE_CURRENT_BINARY_DIR}/parser.cc COMPILE_FLAGS)
+bison_target(Parser parser.y ${CMAKE_CURRENT_BINARY_DIR}/parser.cc)
 else ()
 bison_target(Parser parser.y ${CMAKE_CURRENT_BINARY_DIR}/parser.cc COMPILE_FLAGS -Wno-deprecated)
 endif ()
