Add peer mgmt & proxy service

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@
 #
 
 # ### PROJECT ###
-project(nodebus)
+project(NodeBus)
 cmake_minimum_required(VERSION 2.8.0)
 
 SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/ ${CMAKE_MODULE_PATH})
