--- a/nodebus/core/idlparser/CMakeLists.txt
+++ b/nodebus/core/idlparser/CMakeLists.txt
@@ -34,4 +34,4 @@ flex_target(Scanner scanner.l ${CMAKE_CURRENT_BINARY_DIR}/scanner.cc)
 add_flex_bison_dependency(Scanner Parser)
 
 # ### TARGET ###
-add_library(jsonparser STATIC ${BISON_Parser_OUTPUTS} ${FLEX_Scanner_OUTPUTS} ${project_SRCS} ${project_HDRS})
+add_library(idlparser STATIC ${BISON_Parser_OUTPUTS} ${FLEX_Scanner_OUTPUTS} ${project_SRCS} ${project_HDRS})
