IDL parser & scanner implementation

--- a/nodebus/core/CMakeLists.txt
+++ b/nodebus/core/CMakeLists.txt
@@ -37,4 +37,4 @@ add_subdirectory(idlparser)
 
 # ### TARGET ###
 add_library(nodebus ${NODEBUS_LIBRARY_TYPE} ${project_SRCS} ${project_HDRS} ${project_MOC_SRCS})
-target_link_libraries(nodebus ${QT_LIBRARIES} ${OPENSSL_LIBRARIES} jsonparser)
+target_link_libraries(nodebus ${QT_LIBRARIES} ${OPENSSL_LIBRARIES} jsonparser idlparser)
