IDL compiler update

--- a/nodebus/idlc/CMakeLists.txt
+++ b/nodebus/idlc/CMakeLists.txt
@@ -29,3 +29,9 @@ qt4_wrap_cpp(project_MOC_SRCS)
 # ### TARGET ###
 add_executable(nodebusidlc ${project_SRCS} ${project_HDRS} ${project_MOC_SRCS})
 target_link_libraries(nodebusidlc ${QT_LIBRARIES} nodebus)
+
+INSTALL(TARGETS nodebusidlc
+  RUNTIME DESTINATION bin
+  LIBRARY DESTINATION lib
+  ARCHIVE DESTINATION lib
+)
